--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
           <a class="logo" href="./index.html">Web<span class="logo-header">Studio</span></a>
           <ul class="list">
             <li class="item">
-              <a href="./index.html" class="link curent">
+              <a href="./index.html" class="nav-link curent">
                 Студия
               </a>
             </li>
 
             <li class="item">
-              <a href="./portfolio.html" class="link">
+              <a href="./portfolio.html" class="nav-link">
                 Портфолио
               </a>
             </li>
 
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="nav-link">
                 Контакты
               </a>
             </li>
@@ -139,36 +139,32 @@
           <h2 class="profile title">Чем мы занимаемся</h2>
           <ul class="profile list">
             <li class="profile item">
-              <img
-                class="profile image"
-                src="./images/portfolio/img1.jpg"
-                alt="Десктопные приложения"
-                width="380"
-                height="294"
-              />
-              <h3 class="profile text-title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
+              <div class="image-box">
+                <img class="profile image" src="./images/portfolio/img1.jpg" alt="Десктопные приложения" width="370" height="294" />
+              <div class="box-title">
+                <h3 class="profile text-title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
+              </div>
+            </div>
+              
             </li>
 
             <li class="profile item">
-              <img
-                class="profile image"
-                src="./images/portfolio/img2.jpg"
-                alt="Мобильные приложения"
-                width="380"
-                height="294"
-              />
-              <h3 class="profile text-title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
+              <div class="image-box">
+                <img class="profile image" src="./images/portfolio/img2.jpg" alt="Мобильные приложения" width="370" height="294" />
+              <div class="box-title">
+                <h3 class="profile text-title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
+              </div>
+            </div>
+              
             </li>
 
             <li class="profile item">
-              <img
-                class="profile image"
-                src="./images/portfolio/img3.jpg"
-                alt="Дизайнерские решения"
-                width="380"
-                height="294"
-              />
-              <h3 class="profile text-title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
+              <div class="image-box">
+                <img class="profile image" src="./images/portfolio/img3.jpg" alt="Дизайнерские решения" width="370" height="294" />
+              <div class="box-title">
+                <h3 class="profile text-title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
+              </div>
+              </div>
             </li>
           </ul>
         </div>
@@ -184,12 +180,12 @@
                 <img
                   class="team__image"
                   src="./images/Team/john-smith.jpg"
-                  alt="Джон Смит"
+                  alt="Жека Семёнов"
                   width="270"
                   height="260"
                 />
                 <div class="team__content-card">
-                  <h3 class="name">John Smith</h3>
+                  <h3 class="name">Жека Семёнов</h3>
                   <p class="text">Product Designer</p>
                   <ul class="social-list">
                     <li>
@@ -229,12 +225,12 @@
                 <img
                   class="team__image"
                   src="./images/Team/marta-stewart.jpg"
-                  alt="Марта Стюарт.png"
+                  alt="Машка Свиридова.png"
                   width="270"
                   height="260"
                 />
                 <div class="team__content-card">
-                  <h3 class="name">Marta Stewart</h3>
+                  <h3 class="name">Машка Свиридова</h3>
                   <p class="text">Frontend Developer</p>
                   <ul class="social-list">
                   <li>
@@ -274,12 +270,12 @@
                 <img
                   class="team__image"
                   src="./images/Team/robert-jakis.jpg"
-                  alt="Робер Джекис"
+                  alt="Вова Янковский"
                   width="270"
                   height="260"
                 />
                 <div class="team__content-card">
-                  <h3 class="name">Robert Jakis</h3>
+                  <h3 class="name">Вова Янковский</h3>
                   <p class="text">Marketing</p>
                   <ul class="social-list">
                   <li>
@@ -319,12 +315,12 @@
                 <img
                   class="team__image"
                   src="./images/Team/martin-doe.jpg"
-                  alt="Мартин До"
+                  alt="Мартын Данько"
                   width="270"
                   height="260"
                 />
                 <div class="team__content-card">
-                  <h3 class="name">Martin Doe</h3>
+                  <h3 class="name">Мартын Данько</h3>
                   <p class="text">UI Designer</p>
                   <ul class="social-list">
                     <li>
