--- a/portfolio.html
+++ b/portfolio.html
@@ -112,25 +112,26 @@
                         <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                           платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                       </div>
-                    </div>
-                </div>
-                  
-                  <div class="portfolio__card-content">
-                    <h2 class="portfolio-title">Технокряк</h2>
-                    <p class="portfolio__name">Веб-сайт</p>
+                    </div>         
+                    <div class="portfolio__card-content">
+                      <h2 class="portfolio-title">Технокряк</h2>
+                      <p class="portfolio__name">Веб-сайт</p>
                   </div>
-                </a>
+                  </a>
+              </div>
             </li>
             <li class="production item">
-                <a class="portfolio-link" href="">
-                  <img
-                    class="portfolio__image-card"
-                    src="./images/portfolio-projects/img2.jpg"
-                    alt="Постер"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio__card-content">
+                <div class="product-thumb">
+                  <a class="portfolio-link" href="">
+                    <div class="portfolio-box">
+                      <img class="portfolio__image-card" src="./images/portfolio-projects/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370"
+                        height="294" />
+                      <div class="portfolio-overlay">
+                        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                          платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                      </div>
+                    </div>
+                    <div class="portfolio__card-content">
                     <h2 class="portfolio-title">
                       Постер New Orlean vs Golden Star
                     </h2>
@@ -138,118 +139,140 @@
                     <!--<p class="hide-text">Классический текст-«рыба» (условный, зачастую бессмысленный текст-заполнитель, вставляемый в макет страницы).</p>-->
                   </div>
                 </a>
+                </div>
             </li>
             <li class="production item">
+              <div class="product-thumb">
                 <a class="portfolio-link" href="">
-                  <img
-                    class="portfolio__image-card"
-                    src="./images/portfolio-projects/img3.jpg"
-                    alt="Ресторан Seafood"
-                    width="370"
-                    height="294"
-                  />
+                  <div class="portfolio-box">
+                    <img class="portfolio__image-card" src="./images/portfolio-projects/img3.jpg"
+                      alt="Ресторан Seafood" width="370" height="294" />
+                    <div class="portfolio-overlay">
+                      <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
+                  </div>
                   <div class="portfolio__card-content">
                     <h2 class="portfolio-title">Ресторан Seafood</h2>
                     <p class="portfolio__name">Приложение</p>
                     <!--<p class="hide-text">Lorem ipsum dolor sit amet, eu errem eloquentiam pro. Fuisset platonem postulant eos id, ut mazim legere pri, nostrud debitis no usu.</p>-->
                   </div>
                 </a>
+                </div>
             </li>
             <li class="production item">
-                <a class="portfolio-link" href="">
-                  <img
-                    class="portfolio__image-card"
-                    src="./images/portfolio-projects/img4.jpg"
-                    alt="Проект Prime"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio__card-content">
+                <div class="product-thumb">
+                  <a class="portfolio-link" href="">
+                    <div class="portfolio-box">
+                      <img class="portfolio__image-card" src="./images/portfolio-projects/img4.jpg"
+                        alt="Проект Prime" width="370" height="294" />
+                      <div class="portfolio-overlay">
+                        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                          платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                      </div>
+                    </div>
+                    <div class="portfolio__card-content">
                     <h2 class="portfolio-title">Проект Prime</h2>
                     <p class="portfolio__name">Маркетинг</p>
                     <!--<p class="hide-text">Reprimique eloquentiam ex has, at rebum tempor nec. Qui molestiae conclusionemque ut. Quo denique theophrastus ea, an his justo deseruisse.</p>-->
                   </div>
                 </a>
+                </div>
             </li>
             <li class="production item">
-                <a class="portfolio-link" href="">
-                  <img
-                    class="portfolio__image-card"
-                    src="./images/portfolio-projects/img5.jpg"
-                    alt="Проект Boxes"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio__card-content">
+                <div class="product-thumb">
+                  <a class="portfolio-link" href="">
+                    <div class="portfolio-box">
+                      <img class="portfolio__image-card" src="./images/portfolio-projects/img5.jpg" alt="Проект Boxes" width="370"
+                        height="294" />
+                      <div class="portfolio-overlay">
+                        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                          платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                      </div>
+                    </div>
+                    <div class="portfolio__card-content">
                     <h2 class="portfolio-title">Проект Boxes</h2>
                     <p class="portfolio__name">Приложение</p>
                     <!--<p class="hide-text">Классический текст-«рыба» (условный, зачастую бессмысленный текст-заполнитель, вставляемый в макет страницы).</p>-->
                   </div>
                 </a>
+                </div>
             </li>
             <li class="production item">
+              <div class="product-thumb">
                 <a class="portfolio-link" href="">
-                  <img
-                    class="portfolio__image-card"
-                    src="./images/portfolio-projects/img6.jpg"
-                    alt="Inspiration has no Borders"
-                    width="370"
-                    height="294"
-                  />
+                  <div class="portfolio-box">
+                    <img class="portfolio__image-card" src="./images/portfolio-projects/img6.jpg" alt="Inspiration has no Borders" width="370"
+                      height="294" />
+                    <div class="portfolio-overlay">
+                      <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
+                  </div>
                   <div class="portfolio__card-content">
                     <h2 class="portfolio-title">Inspiration has no Borders</h2>
                     <p class="portfolio__name">Веб-сайт</p>
                     <!--<p class="hide-text">Lorem ipsum dolor sit amet, eu errem eloquentiam pro. Fuisset platonem postulant eos id, ut mazim legere pri, nostrud debitis no usu.</p>-->
                   </div>
                 </a>
+                </div>
             </li>
             <li class="production item">
-                <a class="portfolio-link" href="">
-                  <img
-                    class="portfolio__image-card"
-                    src="./images/portfolio-projects/img7.jpg"
-                    alt="Издание Limited Edition"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolio__card-content">
+                <div class="product-thumb">
+                  <a class="portfolio-link" href="">
+                    <div class="portfolio-box">
+                      <img class="portfolio__image-card" src="./images/portfolio-projects/img7.jpg" alt="Издание Limited Edition"
+                        width="370" height="294" />
+                      <div class="portfolio-overlay">
+                        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                          платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                      </div>
+                    </div>
+                    <div class="portfolio__card-content">
                     <h2 class="portfolio-title">Издание Limited Edition</h2>
                     <p class="portfolio__name">Дизайн</p>
                     <!--<p class="hide-text">Reprimique eloquentiam ex has, at rebum tempor nec. Qui molestiae conclusionemque ut. Quo denique theophrastus ea, an his justo deseruisse.</p>-->
                   </div>
                 </a>
+                </div>
             </li>
             <li class="production item">
-                <a class="portfolio-link" href="">
-                  <img
-                    class="portfolio__image-card"
-                    src="./images/portfolio-projects/img8.jpg"
-                    alt="Проект LAB"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="portfolior__card-content">
+                <div class="product-thumb">
+                  <a class="portfolio-link" href="">
+                    <div class="portfolio-box">
+                      <img class="portfolio__image-card" src="./images/portfolio-projects/img8.jpg" alt="Проект LAB"
+                        width="370" height="294" />
+                      <div class="portfolio-overlay">
+                        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                          платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                      </div>
+                    </div>
+                    <div class="portfolio__card-content">
                     <h2 class="portfolio-title">Проект LAB</h2>
                     <p class="portfolio__name">Маркетинг</p>
                     <!--<p class="hide-text">Классический текст-«рыба» (условный, зачастую бессмысленный текст-заполнитель, вставляемый в макет страницы).</p>-->
                   </div>
                 </a>
+                </div>
             </li>
             <li class="production item">
+              <div class="product-thumb">
                 <a class="portfolio-link" href="">
-                  <img
-                    class="portfolior__image-card"
-                    src="./images/portfolio-projects/img9.jpg"
-                    alt="Growing Business"
-                    width="370"
-                    height="294"
-                  />
+                  <div class="portfolio-box">
+                    <img class="portfolio__image-card" src="./images/portfolio-projects/img9.jpg" alt="Growing Business" width="370"
+                      height="294" />
+                    <div class="portfolio-overlay">
+                      <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
+                  </div>
                   <div class="portfolio__card-content">
                     <h2 class="portfolio-title">Growing Business</h2>
                     <p class="portfolio__name">Приложение</p>
                     <!--<p class="hide-text">Lorem ipsum dolor sit amet, eu errem eloquentiam pro. Fuisset platonem postulant eos id, ut mazim legere pri, nostrud debitis no usu.</p>-->
                   </div>
                 </a>
+                </div>
             </li>
           </ul>
         </div>
